# mytest

src/line_follower2/: CMakeLists.txt  package.xml
src/line_follower2/config/: image.cfg  pid.cfg
src/line_follower2/src/: image_hsv.cpp  line_follower2_node.cpp
src/main/launch/: base_controller.launch  main.launch  set_points.launch  voice_controller.launch
src/main/navacation/: aplay_voice.py  navacation.py  navacation_cv.py  navacation_slam.py  set_points.py
src/main/zhao/: init_pose.py  record_waypoint_utf8.py  testpoint_utf8.py  waypoint.csv  waypoints_quat.csv
src/main/识别/: QR_detect.py  camera copy.py  camera.py  demo.py  detect.py  image_saver.py  qr_camera1.py  traffic_light.py  traffic_light1.py  ucar_pick_n_place_node.py
src/nav_controller_pkg/launch/: zhao.launch
src/nav_controller_pkg/scripts/: goal_trace.py  qr_camera1.py  test.py
src/nav_controller_pkg/src/: config.yaml  navication3.py  navication_test.py  navigation_controller.py
src/nav_controller_pkg/test/src/: audio_manager.py  config_manager.py  main.py  navigator.py  object_detector.py  process_manager.py  qr_code_detector.py  traffic_light_detector.py  utils.py
src/nav_controller_pkg2/: CMakeLists.txt  package.xml  readme.txt
src/nav_controller_pkg2/launch/: nav.launch
src/nav_controller_pkg2/scripts/: qr_camera1.py  qr_item.py  record_points.py  test_model.py
src/nav_controller_pkg2/src/: config.yaml  config2.yaml  config3.yaml  navication.py  navigation4.py  navigation5.py  points.csv  tuning.yaml
src/python3_ws/: goal_trace2.py
